# rag-pipeline

./: .gitignore  build_db.py  pyproject.toml  query_rag.py
app/src/: rag_system.py
app/src/config/: settings.py
app/src/core/: document_processor.py  embedding_service.py  llm_service.py  vector_store.py
app/src/pipelines/: generation.py  ingestion.py  retrieval.py
data/: documents.json
docker/: README.md  docker-compose.yml  init.sql
rag/: rag_system.py
rag/config/: settings.py
rag/core/: __init__.py  document_processor.py  embedding_service.py  llm_service.py  prompt_builder.py  reranker_service.py  vector_store.py
rag/utils/: logger.py
