[project]
name = "rag-pipeline"
version = "0.1.0"
description = "End-to-end implementation of RAG pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.43.0",
    "ipykernel>=6.30.0",
    "numpy>=2.3.2",
    "openai>=1.97.1",
    "pandas>=2.3.1",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.9",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.4.9",
    "python-dotenv>=1.1.1",
]

[tool.ruff]
exclude = [
  ".git",
  ".venv",
  "venv",
  "__pycache__",
  ".mypy_cache",
  ".ruff_cache",
  ".ipynb_checkpoints",
  "build",
  "_build",
  ".vscode"
]
line-length = 100
target-version = "py312"
indent-width = 4

[tool.ruff.lint]
select = [
  "E", "F", "I", "B", "UP", "SIM", "C4", "TID", "ERA", "PL"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = "dynamic"
